# tailor

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
src/: main.rs
